feat: add swagger auth
